<resources>
    <string name="app_name">NuberJam</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_profile">Profile</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_or_email_hint">Username or email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="dont_have_account_text">Don\'t have account?</string>
    <string name="register_text">Register</string>
    <string name="name_hint">Name</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="minimal_password_req">Minimal 8 characters</string>
    <string name="lowercase_req">Contain lower case</string>
    <string name="numbers_req">Contain numbers</string>
    <string name="uppercase_req">Contain upper case</string>
    <string name="form_empty_message">This field can\'t be empty!</string>
    <string name="login_failed_message">Incorrect username/email or password</string>
    <string name="login_success_message">Welcome, %s!</string>
    <string name="register_failed_message">Register failed</string>
    <string name="register_success_message">Register successfully!</string>
    <string name="logout_success_message">Good bye, %s!</string>
    <string name="form_username_contain_spaces">The username can\'t contain spaces</string>
    <string name="form_email_incorrect_format">Incorrect email format</string>
    <string name="form_password_not_same">The passwords are not same</string>
    <string name="loading_for_checking">Loading for checking</string>
    <string name="form_username_used">The username has been used</string>
    <string name="form_email_used">The email has been used</string>
</resources>