<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_min_password"
        android:layout_width="@dimen/font_10sp"
        android:layout_height="@dimen/font_10sp"
        android:src="@drawable/ic_clause_red"
        app:layout_constraintBottom_toBottomOf="@+id/tv_min_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_min_password" />

    <TextView
        android:id="@+id/tv_min_password"
        android:layout_width="@dimen/space_132dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4dp"
        android:text="@string/minimal_password_req"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintStart_toEndOf="@+id/iv_min_password"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_lowercase"
        android:layout_width="@dimen/font_10sp"
        android:layout_height="@dimen/font_10sp"
        android:src="@drawable/ic_clause_red"
        app:layout_constraintBottom_toBottomOf="@+id/tv_lowercase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_lowercase" />

    <TextView
        android:id="@+id/tv_lowercase"
        android:layout_width="@dimen/space_132dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4dp"
        android:text="@string/lowercase_req"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintStart_toEndOf="@+id/iv_min_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_password"
        android:layout_marginTop="@dimen/space_8dp"/>

    <ImageView
        android:id="@+id/iv_numbers"
        android:layout_width="@dimen/font_10sp"
        android:layout_height="@dimen/font_10sp"
        android:src="@drawable/ic_clause_red"
        app:layout_constraintBottom_toBottomOf="@+id/tv_numbers"
        app:layout_constraintStart_toEndOf="@+id/tv_min_password"
        app:layout_constraintTop_toTopOf="@+id/tv_numbers"
        android:layout_marginStart="@dimen/space_4dp"/>

    <TextView
        android:id="@+id/tv_numbers"
        android:layout_width="@dimen/space_132dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4dp"
        android:text="@string/numbers_req"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintStart_toEndOf="@+id/iv_numbers"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_uppercase"
        android:layout_width="@dimen/font_10sp"
        android:layout_height="@dimen/font_10sp"
        android:src="@drawable/ic_clause_red"
        app:layout_constraintBottom_toBottomOf="@+id/tv_uppercase"
        app:layout_constraintStart_toEndOf="@+id/tv_min_password"
        app:layout_constraintTop_toTopOf="@+id/tv_uppercase"
        android:layout_marginStart="@dimen/space_4dp"/>

    <TextView
        android:id="@+id/tv_uppercase"
        android:layout_width="@dimen/space_132dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4dp"
        android:text="@string/uppercase_req"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintStart_toEndOf="@+id/iv_numbers"
        app:layout_constraintTop_toBottomOf="@+id/tv_numbers"
        android:layout_marginTop="@dimen/space_8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>